# tardigrade_micromorphic_linear_elasticity

./: .gitignore  CMakeLists.txt  README.rst  environment.txt  reduced_environment.txt  release_test_script
.github/workflows/: github-test.yml
docs/html/: index.html
docs/sphinx/: CMakeLists.txt  changelog.rst  conf.py.in  dependencies.txt  targets.txt
recipe/: meta.yaml
src/cpp/: CMakeLists.txt  tardigrade_micromorphic_linear_elasticity.cpp  tardigrade_micromorphic_linear_elasticity.h
src/cpp/tests/: CMakeLists.txt  test_tardigrade_micromorphic_linear_elasticity.cpp
src/python/: linear_elastic_parameter_constraint_equations.py  test_linear_elastic_parameter_constraint_equations.py
